# gpn-extensions

./: .editorconfig  .gitignore  .gitmodules  README.md  bb.edn  cuq_gnn.ipynb  entropy.ipynb  eval.clj  get_predictions.ipynb  pyproject.toml  sync_results.sh  test.ipynb  train_and_eval.py
gpn/data/: dataset_manager.py  dataset_provider.py  ood.py
gpn/distributions/: categorical.py
gpn/experiments/: dataset.py  multiple_run_experiment.py  transductive_experiment.py
gpn/layers/: appnp_propagation.py  bayesian.py  evidence.py  linear_sequential.py  normalizing_flow.py  utils.py
gpn/models/: __init__.py  appnp.py  bgcn.py  cuq_gnn.py  dif_rho.py  dropout_ensemble.py  ensemble.py  gat.py  gcn.py  gdk.py  ggp.py  ggp_utils.py  gpflow_gpp.py  gpn_base.py  gpn_log_beta.py  gpn_lop.py  gpn_postnet.py  gpn_postnet_diff.py  matern_ggp.py  matern_ggp_utils.py  model.py  rgcn.py  sgcn.py  utils.py
gpn/nn/: __init__.py  loss.py  metrics.py  transductive_graph_engine.py  utils.py
gpn/utils/: config.py  graphs.py  prediction.py  storage.py  utils.py  visualization_graph.py
