[tool.poetry]
name = "cuq-gnn"
version = "0.1.0"
description = ""
authors = ["Clemens Damke <damke@kiml.ifi.lmu.de>"]
readme = "README.md"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [
	{ include = "gpn", from = "." },
	{ include = "pyblaze", from = "pyblaze" }
]

[tool.poetry.dependencies]
python = "3.10.x"
torch = { version = "^2.1.1", source = "torch" }
torch-geometric = "^2.4.0"
pyg_lib = { version = "0.3.1", source = "pyg" }
torch_scatter = { version = "2.1.2", source = "pyg" }
torch_sparse = { version = "0.6.18", source = "pyg" }
networkx = "^3.2.1"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
funcy = "^2.0"
ogb = "^1.3.6"
sacred = "^0.8.5"
seaborn = "^0.13.0"
plotly = "^5.18.0"
pandas = "^2.1.3"
tinydb = "^4.8.0"
tinydb-serialization = "^2.1.1"
scikit-learn = "^1.3.2"
numpy = "^1.26.2"
tensorboard = "^2.15.1"
pyro-ppl = "^1.8.6"
tensorflow = "^2.15.0"
gpflow = "^2.9.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.1.0+cu118.html"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"
pyright = "^1.1.337"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
